feat: 3단계 예약 추가 / 취소 구현